# django-twc-toolbox

./: .editorconfig  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  RELEASING.md  noxfile.py  pyproject.toml
.copier/: package.yml
.github/workflows/: release.yml  test.yml
docs/: conf.py  index.md
src/django_twc_toolbox/: __init__.py  _types.py  _typing.py  admin.py  apps.py  conf.py  decimal.py  decorators.py  fields.py  filters.py  middleware.py  models.py  numbers.py  paginator.py  sentry.py  tests.py  types.py  urls.py  views.py
src/django_twc_toolbox/crud/: views.py
src/django_twc_toolbox/crud/templates/neapolitan/: object_confirm_delete.html  object_detail.html  object_form.html  object_list.html
src/django_twc_toolbox/crud/templates/neapolitan/partial/: detail.html  list.html
src/django_twc_toolbox/crud/templatetags/: neapolitan.py
src/django_twc_toolbox/management/commands/: copy_template.py  copy_templates.py  createsuperuser.py  list_templates.py
src/django_twc_toolbox/mixins/: ninja.py
src/django_twc_toolbox/templatetags/: django_twc_toolbox.py
src/stubs/django_tables2/: tables.pyi  views.pyi
src/stubs/neapolitan/: views.pyi
src/stubs/neapolitan/templatetags/: neapolitan.pyi
tests/: conftest.py  models.py  settings.py  test_admin.py  test_commands.py  test_conf.py  test_decimal.py  test_decorators.py  test_middleware.py  test_models.py  test_numbers.py  test_paginator.py  test_sentry.py  test_templatetags.py  test_tests.py  test_urls.py  test_version.py
tests/dummy/: models.py
tests/templates/: base.html
tests/test_commands/: test_copy_template.py
tests/test_crud/: conftest.py  models.py  test_templates.py  test_templatetags.py  test_views.py  views.py
