[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{name = "Josh Thomas", email = "josh@joshthomas.dev"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = ["django>=4.2"]
description = "Various tools for Django projects at The Westervelt Company."
dynamic = ["version"]
keywords = []
license = {file = "LICENSE"}
name = "django-twc-toolbox"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
crud = [
  "django-htmx",
  "django-tables2",
  "django-template-partials",
  "neapolitan"
]
cuid = ["cuid", "django-charid-field"]
dev = [
  "bumpver",
  "copier",
  "copier-templates-extensions",
  "coverage[toml]",
  "django-stubs",
  "django-stubs-ext",
  "django-twc-toolbox[crud,cuid,history,sentry]",
  "faker",
  "hatch",
  "mypy",
  "model-bakery",
  "nox[uv]",
  "pytest",
  "pytest-cov",
  "pytest-django",
  "pytest-randomly",
  "pytest-reverse",
  "pytest-xdist",
  "ruff"
]
docs = [
  "cogapp",
  "furo",
  "myst-parser",
  "sphinx",
  "sphinx-autobuild",
  "sphinx-autodoc2",
  "sphinx-copybutton",
  "sphinx-inline-tabs"
]
history = ["django-simple-history"]
lint = ["prek"]
sentry = ["sentry-sdk[django]"]

[project.urls]
Documentation = "https://django-twc-toolbox.westervelt.dev/"
Issues = "https://github.com/westerveltco/django-twc-toolbox/issues"
Source = "https://github.com/westerveltco/django-twc-toolbox"

[tool.basedpyright]
exclude = [
  "**/node_modules",
  "**/__pycache__"
]
include = ["src"]
stubPath = "src/stubs"

[tool.bumpver]
commit = true
commit_message = ":bookmark: bump version {old_version} -> {new_version}"
current_version = "0.18.1"
push = false  # set to false for CI
tag = false
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"

[tool.bumpver.file_patterns]
".copier/package.yml" = ['current_version: {version}']
"src/django_twc_toolbox/__init__.py" = ['__version__ = "{version}"']
"tests/test_version.py" = ['assert __version__ == "{version}"']

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if DEBUG:",
  "if not DEBUG:",
  "if settings.DEBUG:",
  "if TYPE_CHECKING:",
  'def __str__\(self\)\s?\-?\>?\s?\w*\:'
]
fail_under = 75

[tool.coverage.run]
omit = ["src/django_twc_toolbox/migrations/*", "tests/*"]
source = ["django_twc_toolbox"]

[tool.django-stubs]
django_settings_module = "tests.settings"
strict_settings = false

[tool.djlint]
blank_line_after_tag = "endblock,endpartialdef,extends,load"
blank_line_before_tag = "block,partialdef"
custom_blocks = "partialdef"
ignore = "H031"  # Don't require `meta` tag keywords
indent = 2
profile = "django"

[tool.hatch.build]
exclude = [".*", "Justfile"]

[tool.hatch.build.targets.wheel]
packages = ["src/django_twc_toolbox"]

[tool.hatch.version]
path = "src/django_twc_toolbox/__init__.py"

[tool.mypy]
check_untyped_defs = true
exclude = [
  "docs",
  "tests",
  "migrations",
  "venv",
  ".venv"
]
mypy_path = "src/"
no_implicit_optional = true
plugins = ["mypy_django_plugin.main"]
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_errors = true
ignore_missing_imports = true
module = [
  "*.migrations.*",
  "tests.*",
  "docs.*"
]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["charidfield.*", "cuid.*", "simple_history.*"]

[tool.mypy_django_plugin]
ignore_missing_model_attributes = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
addopts = "--create-db -n auto --dist loadfile --doctest-modules"
norecursedirs = ".* bin build dist *.egg htmlcov logs node_modules templates venv"
python_files = "tests.py test_*.py *_tests.py"
pythonpath = "src"
testpaths = ["tests"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".github",
  ".hg",
  ".mypy_cache",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "build",
  "dist",
  "migrations",
  "node_modules",
  "venv"
]
extend-include = ["*.pyi?"]
indent-width = 4
# Same as Black.
line-length = 88
# Assume Python >=3.10
target-version = "py310"

[tool.ruff.format]
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
# Like Black, use double quotes for strings.
quote-style = "double"

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
ignore = ["E501", "E741"]  # temporary
select = [
  "A",  # flake8-builtins
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "DJ",  # flake8-django
  "DTZ",  # flake8-datetimez
  "E",  # Pycodestyle
  "F",  # Pyflakes
  "G",  # flake8-logging-format
  "I",  # isort
  "LOG",  # flake8-logging
  "PIE",  # flake8-pie
  "PT",  # flake8-pytest-style
  "RET",  # flake8-return
  "RUF100",  # unused noqa
  "S",  # flake8-bandit
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "UP"  # pyupgrade
]
unfixable = []

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["django_twc_toolbox"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
# Sphinx expects this setting name.
"docs/conf.py" = ["A001"]
# Stubs mirror third-party APIs.
"src/stubs/**/*.pyi" = ["A002"]
# Tests can use assertions, sample secrets, dummy models, and existing pytest style.
"tests/**/*" = [
  "A001",
  "C401",
  "DJ008",
  "PLR2004",
  "PT006",
  "PT011",
  "PT014",
  "PT030",
  "S101",
  "S105",
  "SIM108",
  "SIM117",
  "SIM118",
  "TID252"
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
